<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/ll_top_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_top_item1"
                    style="@style/tv_top_items"
                    android:text="@string/item1" />

                <TextView
                    android:id="@+id/tv_top_item2"
                    style="@style/tv_top_items"
                    android:text="@string/item2" />

                <TextView
                    android:id="@+id/tv_top_item3"
                    style="@style/tv_top_items"
                    android:text="@string/item3" />

                <TextView
                    android:id="@+id/tv_top_item4"
                    style="@style/tv_top_items"
                    android:text="@string/item4" />

                <TextView
                    android:id="@+id/tv_top_item5"
                    style="@style/tv_top_items"
                    android:text="@string/item5" />
            </LinearLayout>
        </HorizontalScrollView>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_dummy"
            android:layout_width="match_parent"
            android:layout_height="150dp">

        </android.support.v4.view.ViewPager>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_left"
                style="@style/tv_diagonal_items"
                android:layout_alignParentLeft="true"
                android:text="@string/diagonal_item_left" />

            <TextView
                android:id="@+id/tv_middle"
                style="@style/tv_diagonal_items"
                android:layout_below="@id/tv_left"
                android:layout_centerInParent="true"
                android:text="@string/diagonal_item_center" />

            <TextView
                android:id="@+id/tv_right"
                style="@style/tv_diagonal_items"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_middle"
                android:text="@string/diagonal_item_right" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark" />

        <TextView
            android:id="@+id/tv_selected_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/selected_item"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark" />

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center_vertical"

            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_red"
                style="@style/button"
                android:text="@string/btn_red" />

            <Button
                android:id="@+id/btn_orange"
                style="@style/button"
                android:text="@string/btn_orange" />

            <Button
                android:id="@+id/btn_green"
                style="@style/button"
                android:text="@string/btn_green" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>